--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <title>HUB Colloque</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/hub.css">
+    <script src="JS/base.js" defer></script>
 </head>
 <body>
+    <header>
     <div class="navbar">
-        <img class="logo" src="images/Logo.svg" alt="Logo Digital Natives, un N mélangée à un D">
         <div class="navbard">
             <a href ="#" class="bar">Accueil</a>
             <a href ="wip.html" class="bar">Archive</a>
+            <!-- <img class="logo" src="images/Logo.svg" alt="Logo Digital Natives, un N mélangée à un D"> -->
             <a href ="#" class="bar">Contact</a>
             <a href ="#" class="bar">C'est quoi ?</a>
         </div>
     </div>
+</header>
 
     <div class="corps">
         <p class="titre">Accueil</p>
@@ -28,3 +31,4 @@
     </div>
 </body>
 </html>
+
