--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbard">
             <a href ="#" class="bar">Accueil</a>
             <a href ="wip.html" class="bar">Archive</a>
-            <!-- <img class="logo" src="images/Logo.svg" alt="Logo Digital Natives, un N mélangée à un D"> -->
+            <img class="logo" src="images/Logo.svg" alt="Logo Digital Natives, un N mélangée à un D">
             <a href ="#" class="bar">Contact</a>
             <a href ="#" class="bar">C'est quoi ?</a>
         </div>
