--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p class="titre6">Archives</p>
     <div class="blocimage">
         <a><img class="carte2023" onclick="autoScroll()" src="images/placeholder carte.png" alt="carte 2023"></a>
-        <a href="#"><img class="carte2022" src="images/image2022text.png" alt="carte 2022"></a>
+        <a href="2022.html"><img class="carte2022" src="images/image2022text.png" alt="carte 2022"></a>
     </div>
 </div>
 </body>
