derniere version en date 16h 16/12

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <p>.</p>
     <header>
     <div class="navbar">
-            <a href ="#" class="bar"><img class="logo" src="images/Logo.svg" alt="Logo Digital Natives, un N mélangée à un D"></a>
+            <a href ="index.html" class="bar"><img class="logo" src="images/Logo.svg" alt="Logo Digital Natives, un N mélangée à un D"></a>
             <a href="#presentation" class="bar" data-scroll="presentation">Présentation</a>
             <a href="#derniercolloque" class="bar" data-scroll="derniercolloque">Dernier colloque</a>
-            <a href ="#" class="bar">Archives</a>
-            <a href ="#" class="bar">Intervenant</a>
+            <a href="#archive" class="bar" data-scroll="archive">Archives</a>
+            <a href="#intervenant" class="bar" data-scroll="intervenant">Intervenant</a>
     </div>
 </header>
 
@@ -54,11 +54,58 @@
             <a href="#"> <p class="bouton" >DÉCOUVRIR</p></a>
         </div>
     </div>
-    <p class="titre6">Archives</p>
+    <p class="titre6" id="archive">Archives</p>
     <div class="blocimage">
-        <a><img class="carte2023" onclick="autoScroll()" src="images/placeholder carte.png" alt="carte 2023"></a>
+        <a><img class="carte2023" onclick="autoScroll()" src="images/placeholder cartetexte.png" alt="carte 2023"></a>
         <a href="2022.html"><img class="carte2022" src="images/image2022text.png" alt="carte 2022"></a>
     </div>
+    <p class="titre7" id="intervenant">Intervenants</p>
+    <div class="intervenant1">
+        <div class="intervenantbox">
+            <p class="nom-intervenant">André Vitalis - Profession principale</p>
+            <svg class="fleche" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.6 20L0.5 17.9L14.9 3.5H2V0.5H20V18.5H17V5.6L2.6 20Z" fill="white"/>
+                </svg>                
+        </div>
+    </div>
+    <div class="intervenant2">
+        <div class="intervenantbox">
+            <p class="nom-intervenant">Raphael Marzak - Profession principale</p>
+            <svg class="fleche" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.6 20L0.5 17.9L14.9 3.5H2V0.5H20V18.5H17V5.6L2.6 20Z" fill="white"/>
+                </svg>   
+        </div>
+    </div>
+        <div class="intervenant3">
+            <div class="intervenantbox">
+                <p class="nom-intervenant">André Vitalis - Profession principale</p>
+                <svg class="fleche" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.6 20L0.5 17.9L14.9 3.5H2V0.5H20V18.5H17V5.6L2.6 20Z" fill="white"/>
+                    </svg>   
+            </div>
+        </div>
+    <div class =intervenanthide" id="hide" style="display: none">
+        <div class="intervenant3">
+            <div class="intervenantbox">
+                <p class="nom-intervenant">Pablo CASOLA - Profession principale</p>
+                <svg class="fleche" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.6 20L0.5 17.9L14.9 3.5H2V0.5H20V18.5H17V5.6L2.6 20Z" fill="white"/>
+                    </svg>   
+            </div>
+        </div>
+        <div class="intervenant3">
+            <div class="intervenantbox">
+                <p class="nom-intervenant">Oscar Motta - Profession principale</p>
+                <svg class="fleche" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.6 20L0.5 17.9L14.9 3.5H2V0.5H20V18.5H17V5.6L2.6 20Z" fill="white"/>
+                    </svg>   
+            </div>
+        </div>
+    </div>
+
+    
+    
+    <p class="voirpluscss" id="voirplus">voir plus</p>
 </div>
 </body>
 </html>
