Fix de la font Gotham sur Mac

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUB Colloque</title>
+    <title>Colloque MMI</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/hub.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="JS/base.js" defer></script>
 </head>
 <body>
@@ -34,11 +35,11 @@
     <div class="bloc">
         <div class="bloctexte">
             <p class="titre3">UN ÉVÉNEMENT ENGAGÉ</p>
-            <p class ="paragraphe">Sensibiliser sur des <em>sujets sociétaux</em> en lien avec le numérique:<br>
-                c’est le défi que se sont lancés les étudiants passionnés de <em>Métiers du<br>
-                Multimédia et de l’Internet (MMI)</em> de l’université Bordeaux Montaigne.<br>
-                Digital Natives , une journée scientifique qui se dédie à <em>éveiller les<br>
-                consciences</em> des utilisateurs dans un monde où la technologie est de<br>
+            <p class ="paragraphe">Sensibiliser sur des <strong>sujets sociétaux</strong> en lien avec le numérique:<br>
+                c’est le défi que se sont lancés les étudiants passionnés de <strong>Métiers du<br>
+                Multimédia et de l’Internet (MMI)</strong> de l’université Bordeaux Montaigne.<br>
+                Digital Natives , une journée scientifique qui se dédie à <strong>éveiller les<br>
+                consciences</strong> des utilisateurs dans un monde où la technologie est de<br>
                 plus en plus prépondérante.</p>
         </div>
         <img class="imageparagraphe" src="images/placeholder.png" alt="placeholder">
