--- a/wip.html
+++ b/wip.html
@@ -20,7 +20,7 @@
     </div>
     <div class="textebas">
         <div class="texte-box">
-            <p>Rendez-vous le 23 mars 2023.</p>
+            <p>Rendez-vous le 6 avril 2023.</p>
         </div>
     </div>
     <script>
