fix du voir plus

--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
             </div>
         </div>
     </div>
-
-    
-    
-    <p class="voirpluscss" id="voirplus">voir plus</p>
+    <div class="voirplus-container">
+        <p class="voirpluscss" id="voirplus">voir plus</p>
+    </div>
 </div>
 </body>
 </html>
