--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 </div>
 <div class="troisieme-partie">
-    <div class="bloc">
+    <div class="bloc2">
         <div class="bloctexte">
             <p class="titre4" id="derniercolloque">Dernier colloque en date</p>
             <p class="titre5" >Handicap & Numérique</p>
